objects/ESC_Section_Special_Events__c.object
<CustomObject>
    <fields>
        <fullName>ESC_Field_API__c</fullName>
        <label>Field API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_RerenderedSection__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Section To ReRender</label>
        <referenceTo>ESC_Section__c</referenceTo>
        <relationshipLabel>Section Special Events (Section To ReRender)</relationshipLabel>
        <relationshipName>Section_Special_Events1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESC_Section__c</fullName>
        <label>Section</label>
        <referenceTo>ESC_Section__c</referenceTo>
        <relationshipLabel>Section Special Events</relationshipLabel>
        <relationshipName>Section_Special_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ESC_URL__c</fullName>
        <label>URL To Redirect</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ESC_Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Section Special Event</label>
    <nameField>
        <displayFormat>SSE-{00000}</displayFormat>
        <label>Section Special Events Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Section Special Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>